# miniTPC

./: Detector&Physics.md  README.md  env.sh  heprep.mac
branches/.svn/: entries
trunk/: CMakeLists.txt  env-rhel6-64.csh  nEXO.cc
trunk/.svn/: entries
trunk/.svn/text-base/: nEXO.cc.svn-base
trunk/Batch_Call_Scripts/.svn/: entries
trunk/Reconstruction_Scripts/.svn/: entries
trunk/SimulationExamples/.svn/: entries
trunk/SimulationScripts/.svn/: entries
trunk/SimulationScripts/SimulationScripts/: AddDecayChainInfo.py  MacroBuildUtils.py  MakeSimplePlotsDecayChain.py  MergeDecayChain.py
trunk/SimulationScripts_new/: Clustering.py  ExportIntegrals.py  MacroBuildUtils.py  Reconstruction.py  SimUtils.py  SubmitSimulation.py
trunk/include/: MyOpticalSurface.hh  miniTPCDetectorConstruction.hh  miniTPCDetectorMessenger.hh  nEXOAnalysis.hh  nEXODetectorConstruction.hh  nEXODetectorMessenger.hh  nEXOMaterials.hh  nEXOPrimaryGeneratorAction.hh  nEXOSimplePhysVolManager.hh
trunk/include/.svn/: entries
trunk/job/: .nfs000000000114785800000a2c  SiPM_position.root  create_bb0n.sh  create_calibjob.sh  create_electron.sh  create_job.sh  create_scanjob1.sh  create_scanjob2wire.sh  create_scanjobEndCap.sh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length1.5-Distance6-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length2-Distance4-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length2-Distance4.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length2-Distance5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length2-Distance5.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length2-Distance6-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length2.5-Distance4.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length2.5-Distance5.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length3-Distance4.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length3-Distance5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length3-Distance6-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length1.5-Distance4-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length1.5-Distance5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length1.5-Distance5.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length1.5-Distance6-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length2-Distance4-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length2-Distance4.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length2-Distance5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length2-Distance5.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length2-Distance6-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length2.5-Distance4-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length2.5-Distance5.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length3-Distance5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length3-Distance5.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2-Length3-Distance6-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2.5-Length1.5-Distance4-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2.5-Length1.5-Distance5.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2.5-Length2-Distance5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2.5-Length2-Distance5.5-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2.5-Length2-Distance6-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick2.5-Length2.5-Distance4.5-0.csh  (+206 more)
trunk/src/: EXOPhysics.cc  EXOPhysicsList.cc  miniTPCDetectorConstruction.cc  miniTPCDetectorMessenger.cc  nEXOAnalysis.cc  nEXODetectorConstruction.cc  nEXODetectorMessenger.cc  nEXOG4EmLivermorePhysics.cc  nEXOG4S1Light.cc  nEXOMaterials.cc  nEXOPhysicsList.cc  nEXOPrimaryGeneratorAction.cc  nEXOSimplePhysVolManager.cc
trunk/src/.svn/: entries
trunk/test/: job-RingRef0.8-Cathode0.8-Anode0.5-Thick3-Length3-Distance6-0.csh  log  run-RingRef0.8-Cathode0.8-Anode0.5-Thick3-Length3-Distance6-0.in  test.root
trunk/test/SimulationScripts_new/: Card.py  MakeSimplePlots.py
trunk/test/job/: .nfs000000000015d48d00000fb8  .nfs000000000114785300000f9e  .nfs000000000114785d00000668  .nfs00000001258896df0000015e  create_gamma.sh  create_scanjob.sh  create_scanjobEXO200FieldRing.sh  create_scanjobEle.sh  create_scanjobRefIndex.sh  create_scanjob_lj.sh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length1.5-Distance4-0.csh  job-RingRef0.6-Cathode0.6-Anode0.5-Thick1.5-Length1.5-Distance4.5-0.csh  (+241 more)
(+147 files in other folders)
